[package]
name = "whitespacers"
version = "1.1.0"
authors = [ "CensoredUsername cens.username@gmail.com" ]

description = "A whitespace JIT-compiler, for when your whitespace just isn't executing fast enough."

documentation = "https://censoredusername.github.io/whitespace-rs/whitespacers/index.html"
repository = "https://github.com/CensoredUsername/whitespace-rs"

readme = "README.md"
keywords = ["whitespace", "wsc"]
license = "MPL-2.0"

exclude = [
    "commit_docs.sh",
]

[lib]
name = "whitespacers"
path = "src/lib.rs"

[[bin]]
name = "wsc"
path = "src/main.rs"


[dependencies]
itertools  = "0.12.1"
crossbeam  = "0.8.4"
fnv        = "1.0.7"
bitflags   = "2.5.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
dynasmrt   = "2.0.0"

[profile.release]
debug = true
lto = true
