[package]
name = "whitespacers"
version = "1.3.0"
authors = [ "CensoredUsername cens.username@gmail.com" ]

description = "A whitespace JIT-compiler, for when your whitespace just isn't executing fast enough."

documentation = "https://censoredusername.github.io/whitespace-rs/whitespacers/index.html"
repository = "https://github.com/CensoredUsername/whitespace-rs"

readme = "README.md"
keywords = ["whitespace", "wsc"]
license = "MPL-2.0"

edition = "2021"

exclude = [
    "commit_docs.sh",
]

[lib]
name = "whitespacers"
path = "src/lib.rs"

[[bin]]
name = "wsc"
path = "src/main.rs"


[dependencies]
itertools  = "0.13.0"
crossbeam  = "0.8.4"
fnv        = "1.0.7"
bitflags   = "2.6.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
dynasmrt   = "3.0.1"

[profile.release]
debug = true
lto = true
